# src/routes/deal.routes.ts
@@ -1,5 +1,6 @@
 import express from "express";
 import {
+  addNewDealStage,
   createDeal,
   getAllDeals,
   getOneDeal,
@@ -11,5 +12,7 @@ const dealRouter = express.Router();
 dealRouter.route("/").get(getAllDeals).post(createDeal);
 
 dealRouter.route("/:id").get(getOneDeal).put(updateDeal);
+
+dealRouter.route("/:id/stage").put(addNewDealStage);
 
 export default dealRouter;
